@@ -71,7 +71,8 @@ Version 1.4.4 - CVS
   - Ported charset encoding patches from devel. Closes bug #806698 and
     patch #550843.
   - Ported 8bit read reciepts fixes from devel. Closes bug #934033.
-  - Added Net-Style theme by Gabriele Maidecchi. Closes patch #1041323. 
+  - Added Net-Style theme by Gabriele Maidecchi. Closes patch #1041323.
+  - Disabled use of info plugin, when it is not enabled in config. 
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
